@@ -60,6 +60,14 @@ libspectrum_byte ay_registers 1
 libspectrum_byte out_scld_hsr
 libspectrum_byte out_scld_dec
 
+int beta_paged
+int beta_direction
+libspectrum_byte beta_system
+libspectrum_byte beta_track
+libspectrum_byte beta_sector
+libspectrum_byte beta_data
+libspectrum_byte beta_status
+
 libspectrum_byte* pages 1
 
 libspectrum_byte* slt 1
